--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-este es el primer archivo
+<!DOCTYPE html>
+<html lang="en"
+    <head>
+        <meta charset="UTF-8"
+        <title>Pet Life</title>
+    </head>
+    <body> 
+
+    </body>
+    <html>
+
+    </html>
