--- a/index.html
+++ b/index.html
@@ -5,8 +5,38 @@
         <title>Pet Life</title>
     </head>
     <body> 
-
+<h1 style="font-size: 50px;"> ENCABEZADO PRINCIPAL</h1>
+<h2>ENCABEZADO PRINCIPAL</h2>
+<h3>ENCABEZADO PRINCIPAL</h3>
+<h4>ENCABEZADO PRINCIPAL</h4>
+<h5>ENCABEZADO PRINCIPAL</h5>
+        <header>
+        Link
+        Link 2
+        Link 3
+    </header>
+    <main>
+        Mayor relevancia - está enfocada en el SEO
+    </main>
+<section> mi primera seccion
+</section>
+<section> mi segunda seccion
+</section>
+    
+<p>PARRAFO <span style="color: aqua;"</p>
+<p><span style="color: blue;"PARRAFO 2</p>
+<p>PARRAFO 3</p>
+<p>PARRAFO 4</p>
+<p>PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 <br> 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5 PARRAFO 5</p>
+    
+<a href="https://envigroom.ec" target="_blank" >Ingresar a la página //call to action</a>
+ <!-- ESTE ES UN COMENTARIO-->
     </body>
+    <footer>
+        faqs - tyc info importante para que esté en todo el sitio pero no tanto para estar en el header
+    </footer>
     <html>
 
     </html>
+    <nav>para menu lateral</nav>
+    <div>ESTO ES UN DIV para cuando no es seccion ni articulo pero lo necesito dividir</div>
