--- a/index2.html
+++ b/index2.html
@@ -1,13 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <form method="post" action="paginadelserver.php">
+        <label>Nombre</label>
+        <input type="text">
+
+        <label>Contraseña</label>
+        <input type="text">
+        <br>
+        <label>Email</label>
+        <input type="text">
+    </form>
+
+    <div>
+        <div>
+            <div>esta es una anotacion emmet p*5 tab me escribe n veces </div>
+        </div>
+    </div>
+
+    <p>HOLA EN VARIOS CON ALT Y SELECCIONO</p>
+    <p></p>
+    <p>HOLA EN VARIOS CON ALT Y SELECCIONO</p>
+    <p></p>
+    <p>HOLA EN VARIOS CON ALT Y SELECCIONO</p>
+    // es para poner
+    // *p>div y me anida
+    // con alt Z queda todo ajustado a la pantalla*
+    // con alt arriba o abajo muevo la línea completa de lugar
+    // ctrl alt seleciiiono todo
+    // alt shift f queda todo identado*
+// P LOREM IPSUM GENERA UN TEXTO DE PRUEBA (ALEATORIO
+)
+
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae facilis incidunt impedit, minima modi minus ex velit, voluptas qui veritatis, distinctio laudantium dignissimos vero culpa natus cum labore dolor ullam.</p>
+    <p class="Lore">
+
+        para ver todo el codifo en la misma pantalla
+
+    </p>
+    *shift alt y flecha abajo o arriba para duplicar linea*
+    <h1 class="tituloprincipal"></h1>
+    <h1 class="tituloprincipal"></h1>
+    <h1 class="tituloprincipal"></h1>
+    <h1 class="tituloprincipal"></h1>
 </body>
+
 </html>
 
 !
