STYLE HOJA EXTERNA

--- a/indexej.html
+++ b/indexej.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="STUDIO F" />
     <meta property="og:description" content="Vestidos sport para mujeres, marca STUDIO F" />
     <meta property="og:image" content=IMG\STUDIO_F.png />
+<link href="CSS\hojaExterna.css" rel="stylesheet"
 </head>
 
 <h1>"STUDIO F"</h1>
@@ -66,6 +67,13 @@
             </div>
             <span itemprop="reviewBody">Gran vestido y calidad para su precio.</span>
         </div>
+        <p style="background-color: blueviolet;"> ESTE ES UN <i>PARRAFO</i> <b>AÑADIDO</b></p>
+        <style>
+            i{
+                background-color: beige;
+            }
+
+        </style>
         ...
     </div>
 </body>
